crates/test-ui/ui/declare_class_invalid_type.stderr
error[E0277]: the trait bound `Id<CustomObject, Shared>: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Id<CustomObject, Shared>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `Id<CustomObject, Shared>` to implement `EncodeReturn`
  = note: required for `Id<CustomObject, Shared>` to implement `__unstable::convert_private::Sealed`
note: required by a bound in `EncodeConvertReturn`
 --> $WORKSPACE/crates/objc2/src/encode/__unstable.rs
  |
  | pub trait EncodeConvertReturn: convert_private::Sealed {
  |                                ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EncodeConvertReturn`
  = note: this error originates in the macro `$crate::__declare_class_method_out_inner` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<()>: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Vec<()>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `Vec<()>` to implement `EncodeReturn`
  = note: required for `Vec<()>` to implement `__unstable::convert_private::Sealed`
note: required by a bound in `EncodeConvertReturn`
 --> $WORKSPACE/crates/objc2/src/encode/__unstable.rs
  |
  | pub trait EncodeConvertReturn: convert_private::Sealed {
  |                                ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EncodeConvertReturn`
  = note: this error originates in the macro `$crate::__declare_class_method_out_inner` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Box<u32>: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Box<u32>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `Box<u32>` to implement `EncodeConvertArgument`
  = note: this error originates in the macro `$crate::__declare_class_rewrite_args` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CustomObject: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `CustomObject`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `CustomObject` to implement `EncodeConvertArgument`
  = note: this error originates in the macro `$crate::__declare_class_rewrite_args` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)
